[package]
name = "deta"
version = "0.1.0"
edition = "2018"
license-file = "LICENSE"
description = "Deta SDK for Rust"
homepage = "https://github.com/sarmadgulzar/rust-deta"
documentation = "https://github.com/sarmadgulzar/rust-deta"
repository = "https://github.com/sarmadgulzar/rust-deta"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
